[gd_scene load_steps=4 format=3 uid="uid://bfpi8gk7hyujl"]

[ext_resource type="Script" path="res://Scripts/UI/InventoryUI.gd" id="1_6ujwg"]
[ext_resource type="PackedScene" uid="uid://b5ds71vsjjhk6" path="res://Prefabs/UI/InventoryMaterial.tscn" id="1_uoy3n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugqsu"]
bg_color = Color(0.6, 0.6, 0.6, 0.72549)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="InventoryUI" type="Panel"]
custom_minimum_size = Vector2(500, 0)
offset_right = 500.0
offset_bottom = 267.0
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_ugqsu")
script = ExtResource("1_6ujwg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 225)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="InventoryMaterial" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_uoy3n")]
layout_mode = 2

[node name="InventoryMaterial2" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_uoy3n")]
layout_mode = 2

[node name="InventoryMaterial4" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_uoy3n")]
layout_mode = 2

[node name="InventoryMaterial5" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_uoy3n")]
layout_mode = 2

[node name="InventoryMaterial6" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_uoy3n")]
layout_mode = 2

[node name="InventoryMaterial3" parent="VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_uoy3n")]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
